--- a/AspNetCoreBlazorExamples.Web/Pages/Counter.cshtml
+++ b/AspNetCoreBlazorExamples.Web/Pages/Counter.cshtml
@@ -4,7 +4,8 @@
 
 <p>Current count: @currentCount</p>
 
-<button class="btn btn-primary" onclick="@IncrementCount">Click me</button>
+<button class="btn btn-primary" onclick="@IncrementCount">Click me +</button>
+<button class="btn btn-danger" onclick="@DecrementCount">Click me -</button>
 
 @functions {
     int currentCount = 0;
@@ -12,5 +13,10 @@
     void IncrementCount()
     {
         currentCount++;
+    }
+
+    void DecrementCount()
+    {
+        currentCount--;
     }
 }
